Wed Nov 28 16:41:04 2012  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc/servlet.rb:  Add support for serving documentation from a
	  subdirectory.
	* lib/rdoc/generator/darkfish.rb:  ditto
	* test/rdoc/test_rdoc_servlet.rb:  Test for above
	* test/rdoc/test_rdoc_servlet.rb:  ditto

Wed Nov 28 15:37:17 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in: fix r37294: run only on i[3-6]86-linux.

Wed Nov 28 15:31:11 2012  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* io.c (FMODE_SYNCWRITE): removed unused macro.

Wed Nov 28 15:19:25 2012  Naohisa Goto  <ngotogenome@gmail.com>

	* configure.in: revert r37911, r37906 and r37904 which break build
	  with non-gcc and/or non-IA32 compilers, e.g. Solaris Studio,
	  Fujitsu C Compiler. [ruby-dev:46646] [Bug #7451]

Wed Nov 28 14:50:55 2012  Koichi Sasada  <ko1@atdot.net>

	* ext/psych/extconf.rb: copy sources into build directory,
	  not into srcdir.

Wed Nov 28 14:34:06 2012  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (rb_mutex_lock): moved trap context check from
	  rb_mutex_trylock because try_lock have no change to make
	  a deadlock.
	* thread.c (rb_mutex_trylock): ditto.
	* NEWS: news for the above.

Wed Nov 28 13:39:54 2012  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (thread_s_new): uses main_thread->status instead of
	  th->inhibit_thread_creation for preventing thread creation.
	* vm_core.h (rb_vm_struct): remove inhibit_thread_creation field.
	* thread.c (rb_thread_terminate_all): ditto.

Wed Nov 28 13:27:29 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/extconf.rb: use embedded libyaml if no system libyaml is
	  found. [ruby-core:49463]
	* ext/psych/lib/psych.rb: updating to psych 2.0.0
	* ext/psych/lib/psych/deprecated.rb: updated docs
	* ext/psych/psych.gemspec: updated to psych 2.0.0
	* ext/psych/psych.h: fixing header file include for rename
	* ext/psych/psych_emitter.c: renamed to avoid libyaml conflict.
	* ext/psych/psych_emitter.h: ditto