@@ -774,37 +774,6 @@ rb_proc_parameters(VALUE self)
     return rb_iseq_parameters(iseq, is_proc);
 }
 
-/*
- * call-seq:
- *   prc == other_proc   ->  true or false
- *
- * Returns <code>true</code> if <i>prc</i> is the same object as
- * <i>other_proc</i>, or if they are both procs with the same body.
- */
-
-static VALUE
-proc_eq(VALUE self, VALUE other)
-{
-    if (self == other) {
-	return Qtrue;
-    }
-    else {
-	if (rb_obj_is_proc(other)) {
-	    rb_proc_t *p1, *p2;
-	    GetProcPtr(self, p1);
-	    GetProcPtr(other, p2);
-	    if (p1->envval == p2->envval &&
-		p1->block.iseq->iseq_size == p2->block.iseq->iseq_size &&
-		p1->block.iseq->local_size == p2->block.iseq->local_size &&
-		MEMCMP(p1->block.iseq->iseq, p2->block.iseq->iseq, VALUE,
-		       p1->block.iseq->iseq_size) == 0) {
-		return Qtrue;
-	    }
-	}
-    }
-    return Qfalse;
-}
-
 st_index_t
 rb_hash_proc(st_index_t hash, VALUE prc)
 {
@@ -2241,8 +2210,6 @@ Init_Proc(void)
     rb_define_method(rb_cProc, "arity", proc_arity, 0);
     rb_define_method(rb_cProc, "clone", proc_clone, 0);
     rb_define_method(rb_cProc, "dup", proc_dup, 0);
-    rb_define_method(rb_cProc, "==", proc_eq, 1);
-    rb_define_method(rb_cProc, "eql?", proc_eq, 1);
     rb_define_method(rb_cProc, "hash", proc_hash, 0);
     rb_define_method(rb_cProc, "to_s", proc_to_s, 0);
     rb_define_alias(rb_cProc, "inspect", "to_s");
