@@ -1,3 +1,10 @@
+Wed Nov 28 16:59:12 2012  Koichi Sasada  <ko1@atdot.net>
+
+	* proc.c: remove Proc#== and Proc#eql?.
+	  Proc objects compared with thier object ids.
+
+	* test/ruby/test_proc.rb: remove related test.
+
 Wed Nov 28 16:41:04 2012  Eric Hodel  <drbrain@segment7.net>
 
 	* lib/rdoc/servlet.rb:  Add support for serving documentation from a
